@@ -6087,8 +6087,8 @@ the users or bound to other functions in future versions of VM."
     (define-key vm-mode-mark-map "U" 'vm-unmark-message)
     (define-key vm-mode-mark-map "m" 'vm-mark-all-messages)
     (define-key vm-mode-mark-map "u" 'vm-clear-all-marks)
-    (define-key vm-mode-mark-map "C" 'vm-mark-matching-messages)
-    (define-key vm-mode-mark-map "c" 'vm-unmark-matching-messages)
+    (define-key vm-mode-mark-map "C" 'vm-mark-messages-by-selector)
+    (define-key vm-mode-mark-map "c" 'vm-unmark-messages-by-selector)
     (define-key vm-mode-mark-map "T" 'vm-mark-thread-subtree)
     (define-key vm-mode-mark-map "t" 'vm-unmark-thread-subtree)
     (define-key vm-mode-mark-map "S" 'vm-mark-messages-same-subject)
@@ -6098,8 +6098,8 @@ the users or bound to other functions in future versions of VM."
     (define-key vm-mode-mark-map "R" 'vm-mark-summary-region)
     (define-key vm-mode-mark-map "r" 'vm-unmark-summary-region)
     (define-key vm-mode-mark-map "V" 'vm-toggle-all-marks)
-    (define-key vm-mode-mark-map "X" 'vm-mark-matching-messages-with-virtual-folder)
-    (define-key vm-mode-mark-map "x" 'vm-unmark-matching-messages-with-virtual-folder)
+    (define-key vm-mode-mark-map "X" 'vm-mark-messages-by-virtual-folder)
+    (define-key vm-mode-mark-map "x" 'vm-unmark-messages-by-virtual-folder)
     (define-key vm-mode-mark-map "?" 'vm-mark-help)
     (define-key map "W" vm-mode-window-map)
     (define-key vm-mode-window-map "W" 'vm-apply-window-configuration)
@@ -6551,8 +6551,8 @@ folder needs to be updated.")
     ("vm-mail-send-and-exit")
     ("vm-mark-all-messages")
     ("vm-mark-help")
-    ("vm-mark-matching-messages")
-    ("vm-mark-matching-messages-with-virtual-folder")
+    ("vm-mark-messages-by-selector")
+    ("vm-mark-messages-by-virtual-folder")
     ("vm-mark-message")
     ("vm-mark-messages-same-author")
     ("vm-mark-messages-same-subject")
@@ -6628,8 +6628,8 @@ folder needs to be updated.")
     ("vm-toggle-threads-display")
     ("vm-undelete-message")
     ("vm-undo")
-    ("vm-unmark-matching-messages")
-    ("vm-unmark-matching-messages-with-virtual-folder")
+    ("vm-unmark-messages-by-selector")
+    ("vm-unmark-messages-by-virtual-folder")
     ("vm-unmark-message")
     ("vm-unmark-messages-same-author")
     ("vm-unmark-messages-same-subject")
